css/styles.css
/*
A custom Bootstrap 3.1 template
from http://bootply.com

This CSS code should follow the 'bootstrap.css'
in your HTML file.

license: MIT
author: bootply.com
*/

html,body {
    height:100%;
    min-height:100%;
}

.fixed-bg {
    width: 100%;
    height: 100%;
    position: fixed;
    top: 0;
    left: 0;
    z-index: -1;
    background-image:url('/assets/toomersCornerRolledAndBlurred.jpg');
    background-repeat:no-repeat;
    background-position: center center;
    /* background-attachment: fixed; removed for Android */
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
      background-size: cover;
}

.icon-bar {
    background-color:#fff;
}

.navbar a, .nav>li>a:hover {
    color: #fff;
    background-color: transparent;
}

.v-center {
    padding-top:10%;
    font-size:70px;
}

.well {
    border-color:transparent;
}

.go-to-app-btn {
    margin-top: 4em;
}

a.list-group-item.active,[class*='-info'] {
    background-color: #168ccc;
    color:#fff;
}

#heroSection {
    /*background-color: #168ccc;*/
    color:#fff;
    overflow:hidden;
}

#automaticSection {
    background-color: #fff;
    color:#686868;
}

#authenticSection {
    background-color: #168ccc;
    color:#ddd;
}

#auburnSection {
    background-color: #e5e5ef;
    color:#444;
}

#socialSection, #socialSection a {
    color:#f5f5f5;
}

/*#section6 {
    background-color: #168ccc;
    color:#ddd;
}*/

footer {
    background-color:#494949;
    color:#ddd;
    min-height:100px;
    padding-top:20px;
    padding-bottom:40px;
}

footer .nav>li>a {
    padding:3px;
    color:#ccc;
}

footer .nav>li>a:hover {
    background-color:transparent;
    color:#fff;
}

